--- a/.github/workflows/r30b1-xiao.yml
+++ b/.github/workflows/r30b1-xiao.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/benboguan/immortalwrt-mt798x
-  REPO_BRANCH: openwrt-21.02
+  REPO_BRANCH: mt7981-test
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/r30b1-xiao.config
   DIY_P1_SH: script/diy-part1.sh
