--- a/config/r30b1-xiao.config
+++ b/config/r30b1-xiao.config
@@ -4,7 +4,7 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
 CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
+#CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1-112M=y
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
@@ -192,7 +192,7 @@ CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_losetup=m
-CONFIG_PACKAGE_luci-app-mtk=y
+#CONFIG_PACKAGE_luci-app-mtk=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY=y
 CONFIG_PACKAGE_luci-app-turboacc-mtk=y
 CONFIG_PACKAGE_luci-app-upnp=y
