--- a/config/r30b1-test.config
+++ b/config/r30b1-test.config
@@ -4,7 +4,7 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
 CONFIG_TARGET_MULTI_PROFILE=y
-#CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1-112M=y
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
@@ -114,6 +114,8 @@ CONFIG_MTK_WSC_INCLUDED=y
 CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_ENGINE_BUILTIN is not set
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
+# CONFIG_PACKAGE_libustream-openssl is not set
+CONFIG_PACKAGE_libustream-openssl=n
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
@@ -264,6 +266,12 @@ CONFIG_PACKAGE_6rd=y
 CONFIG_PACKAGE_6to4=y
 
 #
+#samba
+#
+#CONFIG_PACKAGE_autosamba=y
+#CONFIG_PACKAGE_samba36-server is not set
+
+#
 # USB与存储相关支持
 #
 #CONFIG_PACKAGE_automount=y
@@ -278,17 +286,82 @@ CONFIG_PACKAGE_6to4=y
 # 插件集成
 #
 CONFIG_PACKAGE_adbyby=y
+#CONFIG_PACKAGE_appfilter=y
+#CONFIG_PACKAGE_aria2=y
+#CONFIG_PACKAGE_aliyundrive-webdav=y
 CONFIG_PACKAGE_fullconenat=y
 #CONFIG_PACKAGE_natflow=y
 #CONFIG_PACKAGE_kmod-natflow=y
 #CONFIG_PACKAGE_natflow-boot=y
 #CONFIG_PACKAGE_natflow-auth=y
 #CONFIG_PACKAGE_luci-app-natflow-users=y
+CONFIG_PACKAGE_UnblockNeteaseMusic-NodeJS=y
 #CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
 CONFIG_PACKAGE_mtkiappd_DUAL_BAND=y
+#CONFIG_PACKAGE_netdata=y
+#CONFIG_PACKAGE_uugamebooster=y
 #CONFIG_PACKAGE_wireless-regdb=y
+#CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
+#CONFIG_PACKAGE_luci-app-adguardhome=y #adguard home
+#CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+#CONFIG_PACKAGE_luci-app-airplay2=y
+#CONFIG_PACKAGE_luci-app-appfilter=y
+#CONFIG_PACKAGE_luci-app-aria2=y
+#CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
+#CONFIG_PACKAGE_luci-app-cd8021x=y
+CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-dnsfilter=y
+CONFIG_PACKAGE_luci-app-wol=y
+#CONFIG_PACKAGE_luci-app-minidlna=y
+#CONFIG_PACKAGE_luci-app-ramfree=y
+#CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-app-familycloud=y
+CONFIG_PACKAGE_luci-app-filetransfer=y
+CONFIG_PACKAGE_luci-app-firewall=y
+#CONFIG_PACKAGE_luci-app-flowoffload=y
+#CONFIG_PACKAGE_luci-app-guest-wifi=y
+#CONFIG_PACKAGE_luci-app-hd-idle=y
+#CONFIG_PACKAGE_luci-app-store=y
+#CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#CONFIG_PACKAGE_luci-app-netdata=y
+#CONFIG_PACKAGE_luci-app-nfs=y
+#CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-openclash=n
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+#CONFIG_PACKAGE_luci-app-eqos=y
+#CONFIG_PACKAGE_luci-app-nat6-helper=y
+#CONFIG_PACKAGE_luci-app-samba=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-sqm=y
+#CONFIG_PACKAGE_luci-app-pushbot=y
+#CONFIG_PACKAGE_luci-app-shairplay=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
+#CONFIG_PACKAGE_luci-app-transmission=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+#CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+#CONFIG_PACKAGE_luci-app-vnstat2=y
+CONFIG_PACKAGE_luci-app-xlnetacc=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-ssl=y
 
 #多播
 CONFIG_PACKAGE_luci-app-syncdial=y
@@ -300,15 +373,6 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 #CONFIG_PACKAGE_luci-app-iptvhelper=y
 
 #
-# 主题
-#
-CONFIG_PACKAGE_luci-theme-design=y
-#CONFIG_PACKAGE_luci-theme-argon-mod=y
-CONFIG_PACKAGE_luci-theme-bootstrap=n
-
-#
 # 基础命令及其他
 #
-CONFIG_PACKAGE_mii_mgr=y
-#CONFIG_PACKAGE_mtkhqos_util=y
 CONFIG_PACKAGE_miniupnpd=y
