--- a/config/r30b1.config
+++ b/config/r30b1.config
@@ -4,7 +4,7 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
 CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
+#CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1=y
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_mt7981-clt-r30b1-112M=y
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
@@ -122,6 +122,7 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=m
 CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
 CONFIG_PACKAGE_ethtool=y
@@ -173,14 +174,19 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_kvcedit=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
+CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcbor=y
+CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libelf=y
+CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libf2fs=m
 CONFIG_PACKAGE_libfido2=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libkvcutil=y
 CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libnl=y
 CONFIG_PACKAGE_libnl-core=y
 CONFIG_PACKAGE_libnl-genl=y
@@ -192,6 +198,7 @@ CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_losetup=m
 CONFIG_PACKAGE_luci-app-mtk=y
@@ -295,7 +302,7 @@ CONFIG_PACKAGE_fullconenat=y
 #CONFIG_PACKAGE_natflow-boot=y
 #CONFIG_PACKAGE_natflow-auth=y
 #CONFIG_PACKAGE_luci-app-natflow-users=y
-CONFIG_PACKAGE_UnblockNeteaseMusic-NodeJS=y
+#CONFIG_PACKAGE_UnblockNeteaseMusic-NodeJS=y
 #CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
 CONFIG_PACKAGE_mtkiappd_DUAL_BAND=y
@@ -318,9 +325,9 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 CONFIG_PACKAGE_luci-app-wol=y
 #CONFIG_PACKAGE_luci-app-minidlna=y
 #CONFIG_PACKAGE_luci-app-ramfree=y
-#CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-familycloud=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
+#CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 #CONFIG_PACKAGE_luci-app-flowoffload=y
 #CONFIG_PACKAGE_luci-app-guest-wifi=y
@@ -351,7 +358,8 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 #CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 #CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-unblockmusic=y
+#CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-upnp=y
 #CONFIG_PACKAGE_luci-app-uugamebooster=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 #CONFIG_PACKAGE_luci-app-vsftpd=y
@@ -373,6 +381,20 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 #CONFIG_PACKAGE_luci-app-iptvhelper=y
 
 #
+# 主题
+#
+CONFIG_PACKAGE_luci-theme-design=y
+#CONFIG_PACKAGE_luci-theme-argon-mod=y
+CONFIG_PACKAGE_luci-theme-bootstrap=n
+
+#
 # 基础命令及其他
 #
+CONFIG_PACKAGE_mii_mgr=y
+#CONFIG_PACKAGE_mtkhqos_util=y
 CONFIG_PACKAGE_miniupnpd=y
+CONFIG_PACKAGE_libjpeg-turbo=y
+CONFIG_PACKAGE_libpng=y
+CONFIG_PACKAGE_libwebp=y
+CONFIG_PACKAGE_drill=y
+CONFIG_PACKAGE_libcron=y
